@@ -221,12 +221,10 @@ set_text (Ebook * ebook, gchar * text,
 	GtkTextView * textview;
 	GtkTextBuffer * buffer;
 	GtkTextIter start, end;
-	gssize size;
+	gssize size, old;
 	GError * err;
 
 	err = NULL;
-	size = strlen (text);
-
 	if (lines_state)
 		text = g_regex_replace (ebook->line, text, -1, 0, " \\1",0 , &err);
 	if (err)
@@ -246,30 +244,19 @@ set_text (Ebook * ebook, gchar * text,
 		ebook->builder = load_builder_xml (NULL);
 	if (!ebook->builder)
 		return;
-	if (!g_utf8_validate (text, -1, NULL))
-	{
-		GtkWidget * dialog, *window;
-		gchar * msg;
-
-		window = GTK_WIDGET(gtk_builder_get_object (ebook->builder, "gpdfwindow"));
-		msg = _("Error: Unable to validate incoming text as UTF-8.");
-		dialog = gtk_message_dialog_new (GTK_WINDOW(window),
-			GTK_DIALOG_DESTROY_WITH_PARENT, GTK_MESSAGE_WARNING,
-			GTK_BUTTONS_CLOSE, "%s", msg);
-		gtk_message_dialog_format_secondary_text (GTK_MESSAGE_DIALOG(dialog), text);
-		gtk_dialog_run (GTK_DIALOG (dialog));
-		gtk_widget_destroy (dialog);
-		return;
-	}
-	if (!text)
-		return;
+	old = strlen (text);
+	text = g_utf8_normalize (text, old, G_NORMALIZE_ALL);
 	size = strlen (text);
-	text = g_utf8_normalize (text, -1, G_NORMALIZE_ALL);
+	if (size < old)
+		ebook->utf8_count += (old - size);
 	textview = GTK_TEXT_VIEW(gtk_builder_get_object (ebook->builder, "textview"));
 	buffer = GTK_TEXT_BUFFER(gtk_builder_get_object (ebook->builder, "textbuffer1"));
 	gtk_text_buffer_get_bounds (buffer, &start, &end);
-	gtk_text_buffer_insert (buffer, &end, text, size);
-	gtk_text_buffer_set_modified (buffer, TRUE);
+	if ((text != NULL) && (g_utf8_validate (text, size, NULL)))
+	{
+		gtk_text_buffer_insert (buffer, &end, text, size);
+		gtk_text_buffer_set_modified (buffer, TRUE);
+	}
 	gtk_widget_show (GTK_WIDGET(textview));
 }
 
@@ -306,6 +293,7 @@ load_pdf (gpointer data)
 	gchar *page, * msg, * lang;
 	gdouble fraction, step, width, height;
 	PopplerPage * PDFPage;
+	const gchar * str;
 	gint pages;
 	guint id;
 	Equeue * queue;
@@ -339,7 +327,21 @@ load_pdf (gpointer data)
 #endif
 		gtk_progress_bar_set_text (progressbar, "");
 		gtk_progress_bar_set_fraction (progressbar, 0.0);
-		gtk_statusbar_push (statusbar, id, _("Done"));
+		if (queue->ebook->utf8_count > 0)
+		{
+			/* Translators: Please try to keep this string brief,
+			 there often isn't a lot of room in the statusbar. */
+			str = ngettext ("%ld non-UTF8 character was removed",
+				"%ld non-UTF-8 characters were removed", queue->ebook->utf8_count);
+			msg = g_strdup_printf (str, queue->ebook->utf8_count);
+			id = gtk_statusbar_get_context_id (statusbar, PACKAGE);
+			gtk_statusbar_push (statusbar, id, msg);
+			g_free (msg);
+		}
+		else
+		{
+			gtk_statusbar_push (statusbar, id, _("Done"));
+		}
 		return FALSE;
 	}
 	PDFPage = poppler_document_get_page (queue->ebook->PDFDoc, queue->c);
